# esp32-tempsensor-server

./: Cargo.toml  README.md
src/: config.rs  main.rs
