[package]
name = "esp32-tempsensor-server"
version = "0.1.0"
authors = ["Maximilian Wolf <github@wolf-max.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "^0.49.1", default-features = false }
esp-idf-hal = "^0.44.1"
#bme280-rs = "0.1.0"
bme280 = "0.5.1"
serde = "1.0.193"
anyhow = "1.0.75"

[build-dependencies]
embuild = "0.32.0"
